# TPT

./: .gitignore  README.md  logger.conf  pyproject.toml  setup.cfg
src/: calc_surp.py  preprocess_constituency.py  preprocess_dependency.py  train.py  utils.py
