[tool.poetry]
name = "sllm"
version = "0.1.0"
description = ""
authors = ["yoshiryo0617 <yoshiryo0617@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
transformers = "^4.34.0"
accelerate = "^0.23.0"
datasets = "^2.14.5"
sentencepiece = "^0.1.99"
nltk = "^3.8.1"
lm-zoo = "^1.3"
spython = "^0.3.0"
docker = "^6.1.3"
pyparsing = "^3.1.1"
tensorboard = "^2.14.1"
spacy = "^3.7.2"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.5.1"
matplotlib = "^3.8.0"
ipykernel = "^6.25.2"
scipy = "^1.11.4"
svgling = "^0.4.0"

[tool.isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = true

[tool.mypy]
python_version="3.9"
files = "src"
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
pretty = true
allow_untyped_globals = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
